ADD: 프로젝트 파일 업로드 시 컨테이너 자동 빌드 기능

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,10 @@ spring:
     allow-bean-definition-overriding: true
   config:
     import: classpath:/env.yml
+  servlet:
+    multipart:
+      maxFileSize: ${file.upload-size}
+      maxRequestSize: ${file.upload-size}
   jpa:
     database: mysql
     show-sql: true
