--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ dependencies {
 
 	implementation 'com.google.guava:guava:31.1-jre'
 	implementation 'commons-io:commons-io:2.11.0'
+	implementation 'org.apache.commons:commons-exec:1.3'
 }
 
 tasks.named('test') {
